--- a/styles.css
+++ b/styles.css
@@ -1,50 +1,24 @@
-/* body {*/
-    /* Center the form on the page */
-/*    text-align: center;*/
-/*}*/
-
-.container-centered {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-fieldset {
-    display: inline-block;
-    border: 1px solid #ccc;
-    border-radius: 1em;
-    box-sizing: border-box;
-}
-
-ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: aliceblue;
 }
 
 label {
     /* Uniform size & alignment */
     display: inline-block;
-    min-width: 100px;
+    min-width: 80px;
     text-align: right;
     padding-right: 5px;
 }
 
-h1 {
+header {
     text-align: center;
 }
 
-.radio_label {
-    min-width: none;
-    padding-right: 0;
-}
-
 input {
-    /* To make sure that all text fields have the same font settings.
-        By default, textareas have a monospace font */
-    font: 1em sans-serif;
-    /* Uniform text field size */
-    min-width: 250px;
+    font-size: 1em;
+    width: 150px;
+    min-width: 150px;
     box-sizing: border-box;
     /* Match form field borders */
     border: 1px solid #999;
@@ -56,133 +30,82 @@ input:focus {
 }
 
 select {
-    min-width: 250px;
-}
-
-.waiver_input {
-    min-width: 100px;;
-}
-
-input[type='checkbox'] {
-    min-width: 20px;
-}
-
-input[type='radio'] {
-    min-width: 20px;
-}
-
-.recovery_label {
     min-width: 150px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1em;
 }
 
-.checkbox_label {
-    text-align: left;
-    padding-right: 0px;
+input[type='date'], input[type='time'] {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1em;
 }
 
-.recovery_input {
-    min-width: 150px;
-    width: 150px;
+.main-container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 1em;
+    max-width: 600px;
+    margin: 0 auto;
+    padding: 0.5em;
 }
 
-.weathercock_data p {
-    /* Top Right Bottom Left */
-    padding: 0 0 0 0;
-    margin: 0;
+.input-fieldset {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 0.8em;
+    gap: 0.5em;
+    border: 1px solid #ccc;
+    border-radius: 0.5em;
+    background-color: white;
+    filter: drop-shadow(0.2em 0.2em 0.25em #80808080);
 }
 
-.weathercock_table_header {
-    border: 2px solid #000;
-    background-color: #ddd;
-    margin: 0;
-    font-weight: bold;
-    text-align: center;
-    display: inline-block;
-    min-height: 20px;
-    min-width: 130px;
-    padding-right: 5px;
+.csv-options-toggle {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    max-width: 600px;
+    margin: 1em auto;
 }
 
-.weathercock_table_label {
-    border: 2px solid #000;
-    background-color: #ddd;
-    margin: 0;
-    text-align: center;
-    display: inline-block;
-    min-height: 20px;
-    min-width: 130px;
-    padding-right: 5px;
+#btn_fetch_wind_forecast, #btn_save_csv_file {
+    filter: drop-shadow(0.2em 0.2em 0.25em #80808080);
 }
 
-.weathercock_table {
-    border: 2px solid #000;
-    margin: 0;
-    text-align: center;
-    display: inline-block;
-    min-height: 20px;
-    min-width: 130px;
-    max-width: 139px;
+.control-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1em;
+    width: 100%;
+    margin: 1em auto;
 }
 
-/** Adding styling for tables. Pulled from MDN tutorial's minimal-table. */
-table {
-    border-collapse: collapse;
-    border: 2px solid rgb(200,200,200);
-    letter-spacing: 1px;
-    font-size: 0.8rem;
-    margin-left: auto;
-    margin-right: auto;
+.input-container, .feedback-container {
+    display: block;
+    padding: 1em auto;
+    margin: 0 auto;
 }
 
-td, th {
-    border: 1px solid rgb(190,190,190);
-    padding: 10px 20px;
-}
-
-th {
-    background-color: rgb(235,235,235);
-}
-
-td {
+.feedback-container {
+    font-size: 1.6em;
     text-align: center;
 }
 
-tr:nth-child(even) td {
-    background-color: rgb(250,250,250);
+.button-container {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    margin: 0 auto;
 }
 
-tr:nth-child(odd) td {
-    background-color: rgb(245,245,245);
-}
-
-caption {
-    padding: 10px;
-}
-
-/* Add a black background color to the top navigation */
-.topnav {
-    background-color: #333;
-    overflow: hidden;
-}
-
-/* Style the links inside the navigation bar */
-.topnav a {
-    float: left;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-}
-
-/* Change the color of links on hover */
-.topnav a:hover {
-    background-color: #ddd;
-    color: black;
-}
-
-/* Add a color to the active/current link */
-.topnav a.active {
-    background-color: #04AA6D;
-    color: white;
+#show-csv-options {
+    width: initial;
+    min-width: initial;
 }
