--- a/styles.css
+++ b/styles.css
@@ -65,15 +65,8 @@ input[type='date'], input[type='time'] {
     filter: drop-shadow(0.2em 0.2em 0.25em #80808080);
 }
 
-.csv-options-toggle {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    max-width: 600px;
-    margin: 1em auto;
-}
-
 #btn_fetch_wind_forecast, #btn_save_csv_file {
+    font-size: 1em;
     filter: drop-shadow(0.2em 0.2em 0.25em #80808080);
 }
 
@@ -105,7 +98,61 @@ input[type='date'], input[type='time'] {
     margin: 0 auto;
 }
 
-#show-csv-options {
-    width: initial;
-    min-width: initial;
+.csv-options-toggle {
+    max-width: 600px;
+    margin: 0 auto;
+    padding: 0.5em 1em;
+    color: black;
+    background-color: lightgrey;
+    font-size: 1em;
+    text-align: left;
+    outline: none;
+    border: 1px solid lightgrey;
+    border-radius: 0.4em;
+    filter: drop-shadow(0.2em 0.2em 0.25em #80808080);
+    transition: border-radius 0.2s linear;
+}
+
+.csv-options-toggle:hover {
+    background-color: darkgrey;
+    border: 1px solid darkgrey;
+}
+
+.csv-options-toggle:after {
+    content: '\02795'; /* Unicode character for "plus" sign (+) */
+    color: black;
+    font-size: 1em;
+    float: right;
+    margin-left: 5px;
+}
+
+.active {
+    border-radius: 0.4em 0.4em 0 0;
+}
+
+.active:after {
+    content: "\2796"; /* Unicode character for "minus" sign (-) */
+}
+
+.csv-options-collapsable {
+    padding: 0;
+    overflow: hidden;
+    max-height: 0;
+    filter: drop-shadow(0.2em 0.2em 0.25em #80808080);
+    transition: max-height 0.2s ease-out;
+}
+
+.csv-options-container {
+    background-color: #e4ecff;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 1em;
+    max-width: 600px;
+    margin: 0 auto;
+    padding: 1.5em 1em;
+    border: 1px solid lightgrey;
+    border-radius: 0 0 0.4em 0.4em;
 }
